Fixed very broken CSS

--- a/src/frontend/src/style/_pages.scss
+++ b/src/frontend/src/style/_pages.scss
@@ -46,7 +46,7 @@
   }
 }
 
-#support-page {
+.general-page {
 
   padding: 1rem;
 
